# blog

./: .gitignore  .textlintignore  .textlintrc.json  404.html  Pipfile  README.md  astro.config.mjs  index.html  migrate_frontmatter.py  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitemap.xml  theme_options.md  wrangler.jsonc
.github/workflows/: cleanup-deployments.yml  deploy-cloudflare-status-proxy.yml  deploy-github-status-proxy.yml  deploy-latest-statuses-proxy.yml  deploy.yml  lint-text.yml  push-main.yml  search-index.yml
_legacy/: blog.py
_legacy/docs/: license.txt  resume.md
_legacy/overrides/: main.html
_legacy/site/: 404.html  index.html
cloudflare-status-proxy/: README.md  package-lock.json  package.json  wrangler.jsonc
coding/abc188-c/: index.html
docs/: index.md  pgp  resume.md
github-status-proxy/: README.md  package-lock.json  package.json  wrangler.jsonc
latest-statuses-proxy/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
overrides/: main.html
public/: CNAME  _headers  _routes.json  cloudflare-platform-uptime.json  cloudflare-status.json  manj-cloudflare-platform-status.js  manj-fediverse-statuses.js  manj-github-pages-uptime.js  manji0.asc
resume/: index.html
scripts/: build-search-index.mjs  subset-fonts.mjs  sync-kamae-docs.mjs  upload-r2-assets.mjs
search/: search_index.json
site-worker/: README.md  package.json  wrangler.jsonc
slides/: README.md  package.json
src/: kamae-sidebar.mjs  middleware.ts  project-sidebar.mjs  sidebar-config.mjs
(+721 files in other folders)
