[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Wataru Manji", email = "manji@linux.com" }
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "pyyaml>=6.0.1",
    "mdx-include>=1.4.2",
    "mkdocs-markdownextradata-plugin>=0.2.5",
    "typer-cli>=0.0.13",
    "python-markdown-math>=0.8",
    "fontawesome-markdown>=0.2.6",
    "pygments>=2.17.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "blog:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["docs/"]
