[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pyyaml>=6.0.3",
    "mdx-include>=1.4.2",
    "mkdocs-markdownextradata-plugin>=0.2.6",
    "typer-cli>=0.20.0",
    "python-markdown-math>=0.9",
    "pygments>=2.19.2",
]
authors = [
    { name = "Wataru Manji", email = "manji@linux.com" }
]

[project.scripts]
hello = "blog:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


